@@ -211,6 +211,6 @@ private:
     HRESULT             ParseClut(CGolombBuffer& gb, WORD wSegLength);
     HRESULT             ParseObject(CGolombBuffer& gb, WORD wSegLength);
 
+    HRESULT             EnqueuePage(REFERENCE_TIME rtStop);
     HRESULT             UpdateTimeStamp(REFERENCE_TIME rtStop);
-
 };
